--- a/components/titleActionsModal.module.css
+++ b/components/titleActionsModal.module.css
@@ -2,7 +2,7 @@
 .darkBG {
     background-color: rgba(0, 0, 0, 0.6);
     width: 100vw;
-    height: 100%;
+    height: 1000vh;
     z-index: 0;
     top: 50%;
     left: 50%;
