--- a/app/globals.css
+++ b/app/globals.css
@@ -23,3 +23,26 @@ body {
 body.modal-open {
   overflow: hidden;
 }
+
+.loader {
+  border: 2px solid #f3f3f3; /* Light grey */
+  border-top: 2px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  animation: spin 2s linear infinite;
+}
+
+.loader-red {
+  border: 2px solid #f3f3f3; /* Light grey */
+  border-top: 2px solid #db3455; /* Blue */
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
