--- a/app/titles-manager/titleActionsModal.module.css
+++ b/app/titles-manager/titleActionsModal.module.css
@@ -1,11 +1,11 @@
 
 .darkBG {
     background-color: rgba(0, 0, 0, 0.6);
-    width: 100vw;
-    height: 1000vh;
+    width: 170%;
+    height: 200%;
     z-index: 0;
-    top: 50%;
-    left: 50%;
+    top: 33%;
+    left: 33%;
     transform: translate(-50%, -50%);
     position: fixed;
 }
@@ -37,6 +37,10 @@
 .actionButton {
     border: solid white 2px;
     padding: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .close-button:hover {
