--- a/app/globals.css
+++ b/app/globals.css
@@ -20,75 +20,15 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.nav-links-container {
+  background-color: var(--background);
+  border-color: var(--foreground);
+}
+
+.nav-link {
+  color: var(--foreground);
+}
+
 body.modal-open {
   overflow: hidden;
-}
-
-.job-volumes-card > div:last-child > hr {
-  display: none;
-}
-
-.loader {
-  border: 2px solid #f3f3f3; /* Light grey */
-  border-top: 2px solid #3498db; /* Blue */
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  animation: spin 2s linear infinite;
-}
-
-.loader-red {
-  border: 2px solid #f3f3f3; /* Light grey */
-  border-top: 2px solid #db3455; /* Blue */
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  animation: spin 2s linear infinite;
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-
-.loader-bar {
-  position: relative;
-  min-height: 8px;
-  overflow-x: hidden;
-  scrollbar-width: none;
-}
-
-.loader-bar::before {
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  min-height: 8px;
-  background-color: rgba(11,11,11,.5);
-}
-
-.loader-bar::after {
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  width: 130px;
-  min-height: 8px;
-  background-color: orange;
-  animation: load 3.5s linear infinite;
-}
-
-@keyframes load {
-  0% {
-    left: -50%;
-    width: 20%;
-  }
-  50% {
-    left: 50%;
-    width: 40%;
-  }
-  100% {
-    left: 150%;
-    width: 60%;
-  }
 }
