- Added Auth (yay!) - Separated public and auth protected parts, the actual app being protected and the public part representing the future portfolio - Multiple UI improvements, introducing a modern rounded look (to be polished) - Added a welcome page (the said future portfolio)

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,14 +21,25 @@ body {
 }
 
 .nav-links-container {
-  background-color: var(--background);
   border-color: var(--foreground);
+  background-color: var(--background);
 }
 
 .nav-link {
-  color: var(--foreground);
+  color: var(--background);
 }
 
 body.modal-open {
   overflow: hidden;
+}
+
+.primary-btn {
+  padding: 1rem;
+  border-radius: 5px;
+  background-color: var(--foreground);
+  color: var(--background);
+}
+
+.primary-btn:focus, .nav-link:focus {
+  outline: 2px solid var(--foreground);
 }
