--- a/app/globals.css
+++ b/app/globals.css
@@ -25,8 +25,16 @@ body {
   background-color: var(--background);
 }
 
+/* Hide scrollbar for IE, Edge and Firefox */
 .nav-link {
   color: var(--background);
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.nav-links-div::-webkit-scrollbar {
+  display: none;
 }
 
 body.modal-open {
@@ -40,6 +48,14 @@ body.modal-open {
   color: var(--background);
 }
 
-.primary-btn:focus, .nav-link:focus {
-  outline: 2px solid var(--foreground);
+.primary-input {
+  padding: 1rem;
+  border-radius: 5px;
+  border: 2px solid var(--foreground);
+  background-color: var(--background);
+  color: var(--foreground);
+}
+
+.primary-btn:focus, .primary-input:focus, .nav-link:focus {
+  outline: 6px solid #fcd34d;
 }
