--- a/app/globals.css
+++ b/app/globals.css
@@ -28,8 +28,10 @@ body {
 /* Hide scrollbar for IE, Edge and Firefox */
 .nav-link {
   color: var(--background);
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -56,6 +58,8 @@ body.modal-open {
   color: var(--foreground);
 }
 
-.primary-btn:focus, .primary-input:focus, .nav-link:focus {
+.primary-btn:active,
+.primary-input:focus,
+.nav-link:active {
   outline: 6px solid #fcd34d;
 }
