--- a/components/jobs-manager/jobs-manager.css
+++ b/components/jobs-manager/jobs-manager.css
@@ -23,17 +23,30 @@
 }
 
 .primary-btn {
-  padding: 1rem;
-  border-radius: 5px;
-  background-color: var(--foreground);
-  color: var(--background);
+    padding: 1rem;
+    border-radius: .375rem;
+    border: 1px solid var(--foreground);
+    background-color: var(--foreground);
+    color: var(--background);
 }
+
+.secondary-btn {
+    padding: 1rem;
+    border-radius: .375rem;
+    border: 1px solid var(--foreground);
+    background-color: transparent;
+    color: var(--foreground);
+    min-height: 50px;
+    max-height: 50px;
+    line-height: 100%;
+}
+
 .loader {
     border: 2px solid #f3f3f3;
     /* Light grey */
     border-top: 2px solid #3498db;
     /* Blue */
-    border-radius: 50%;
+    border-radius: 100%;
     width: 20px;
     height: 20px;
     animation: spin 2s linear infinite;
