--- a/components/jobs-manager/jobs-manager.css
+++ b/components/jobs-manager/jobs-manager.css
@@ -13,13 +13,15 @@
     border-color: var(--foreground);
 }
 
-.job-volumes-card>div:last-child>hr {
-    display: none;
+.job-volumes-card>div:last-child>hr:last-child {
+    display: block ! important;
 }
 
 .volume-computation-percentage {
     color: var(--background);
     background-color: var(--foreground);
+    padding-left: 4px;
+    padding-right: 4px;
 }
 
 .primary-btn {
@@ -31,13 +33,11 @@
 }
 
 .secondary-btn {
+    padding: 1rem;
     border-radius: .375rem;
     border: 1px solid var(--foreground);
     background-color: transparent;
     color: var(--foreground);
-    min-height: 50px;
-    max-height: 50px;
-    line-height: 100%;
 }
 
 .loader {
