--- a/components/titles-manager/titles-manager.css
+++ b/components/titles-manager/titles-manager.css
@@ -40,3 +40,25 @@
     max-height: 50px;
     line-height: 100%;
 }
+
+.loader {
+    border: 2px solid #f3f3f3;
+    /* Light grey */
+    border-top: 2px solid #3498db;
+    /* Blue */
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    animation: spin 2s linear infinite;
+}
+
+@media screen and (max-width: 730px) {
+    .titleActionsModal__footer {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .titleActionsModal__footer>button {
+        margin-bottom: 0.5rem;
+    }
+}
