- Implemented Incremental Static Regeneration (ISR) - No-overflow hidden in Chrome

--- a/components/titles-manager/titles-manager.css
+++ b/components/titles-manager/titles-manager.css
@@ -10,6 +10,11 @@
     border-color: var(--foreground);
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+.title-card-name-container::-webkit-scrollbar {
+  display: none;
+}
+
 .close-button {
     background-color: var(--foreground);
 }
