--- a/app/(protected)/app/titles-manager/titles-manager.css
+++ b/app/(protected)/app/titles-manager/titles-manager.css
@@ -6,13 +6,15 @@
     height: 48px;
     background-color: transparent;
     border: none;
-    border-radius: 15px; /* Circular shape */
+    border-radius: 15px;
+    /* Circular shape */
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
     font-weight: 500;
-    font-size: 24px; /* Adjust font size as needed */
+    font-size: 24px;
+    /* Adjust font size as needed */
 }
 
 .close-button:hover {
@@ -28,6 +30,74 @@
     position: fixed;
 }
 
+.masonry-wrapper {
+    margin: 1.5em;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-right: auto;
+    margin-left: auto;
+}
 
+.masonry {
+    display: grid;
+    grid-template-columns: repeat(1, minmax(100px, 1fr));
+    grid-gap: 10px;
+    grid-auto-rows: 0;
+}
 
+@media only screen and (max-width: 1344px) and (min-width: 768px) {
+    .masonry {
+        grid-template-columns: repeat(2, minmax(100px, 1fr));
+    }
+}
 
+@media only screen and (max-width: 1778px) and (min-width: 1345px) {
+    .masonry {
+        grid-template-columns: repeat(4, minmax(100px, 1fr));
+    }
+}
+
+@media only screen and (min-width: 1779px) {
+    .masonry {
+        grid-template-columns: repeat(5, minmax(100px, 1fr));
+    }
+}
+
+.masonry-item,
+.masonry-content {
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    height: max-content;
+    align-items: center;
+}
+
+.masonry-item {
+    filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, .3));
+    transition: filter .25s ease-in-out;
+}
+
+.masonry-item:hover {
+    filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, .3));
+}
+
+.masonry-footer {
+    font-size: .75em;
+    opacity: .25;
+    text-align: center;
+    padding-top: 3em;
+    padding-bottom: 3em;
+    margin-bottom: -1.5em;
+    transition: opacity 1s ease-in-out;
+}
+
+.masonry-footer a {
+    color: currentColor;
+}
+
+.masonry-footer:hover,
+.masonry-footer:active,
+.masonry-footer:focus {
+    opacity: .75;
+}
