--- a/app/(protected)/app/titles-manager/titles-manager.css
+++ b/app/(protected)/app/titles-manager/titles-manager.css
@@ -74,12 +74,16 @@
 }
 
 .masonry-item {
-    filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, .3));
+    /*filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, .3));*/
     transition: filter .25s ease-in-out;
 }
 
 .masonry-item:hover {
     filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, .3));
+}
+
+.masonry-item:active {
+    outline: 6px solid #fcd34d;
 }
 
 .masonry-footer {
