--- a/app/(protected)/app/titles-manager/titles-manager.css
+++ b/app/(protected)/app/titles-manager/titles-manager.css
@@ -46,19 +46,19 @@
     grid-auto-rows: 0;
 }
 
-@media only screen and (max-width: 1344px) and (min-width: 768px) {
+@media only screen and (max-width: 1249px) and (min-width: 768px) {
     .masonry {
         grid-template-columns: repeat(2, minmax(100px, 1fr));
     }
 }
 
-@media only screen and (max-width: 1778px) and (min-width: 1345px) {
+@media only screen and (max-width: 1499px) and (min-width: 1250px) {
     .masonry {
         grid-template-columns: repeat(4, minmax(100px, 1fr));
     }
 }
 
-@media only screen and (min-width: 1779px) {
+@media only screen and (min-width: 1500px) {
     .masonry {
         grid-template-columns: repeat(5, minmax(100px, 1fr));
     }
@@ -76,10 +76,11 @@
 .masonry-item {
     /*filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, .3));*/
     transition: filter .25s ease-in-out;
+    background: var(--background);
 }
 
 .masonry-item:hover {
-    filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, .3));
+    filter: drop-shadow(0px 0px 5px rgb(159, 159, 159));
 }
 
 .masonry-item:active {
