--- a/app/globals.css
+++ b/app/globals.css
@@ -18,6 +18,11 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  -ms-overflow-style: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 .nav-links-container {
@@ -31,8 +36,10 @@ body {
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .nav-links-container {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
@@ -67,6 +74,9 @@ body.modal-open {
   border: 1px solid var(--foreground);
   background-color: transparent;
   color: var(--foreground);
+  /* min-height: 50px;
+  max-height: 50px;
+  line-height: 100%; */
 }
 
 .primary-input {
@@ -82,4 +92,113 @@ body.modal-open {
 .primary-input:focus,
 .nav-link:active {
   outline: 6px solid #fcd34d;
+}
+
+.animate {
+  animation-duration: 0.5s;
+  animation-name: animate-fade;
+  animation-delay: 1s;
+  animation-fill-mode: backwards;
+}
+
+.animate-fast {
+  animation-duration: 0.5s;
+  animation-name: animate-fade;
+  animation-delay: 0.25s;
+  animation-fill-mode: backwards;
+}
+
+.animate-faster {
+  animation-duration: 0.2s;
+  animation-name: animate-fade;
+  animation-delay: 0.0s;
+  animation-fill-mode: backwards;
+}
+
+@keyframes animate-fade {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+
+.loader {
+  border: 2px solid #f3f3f3;
+  /* Light grey */
+  border-top: 2px solid #3498db;
+  /* Blue */
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  animation: spin 2s linear infinite;
+}
+
+.loader-red {
+  border: 2px solid #f3f3f3;
+  /* Light grey */
+  border-top: 2px solid #db3455;
+  /* Blue */
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.loader-bar {
+  position: relative;
+  min-height: 8px;
+  overflow-x: hidden;
+  scrollbar-width: none;
+  color: white;
+}
+
+.loader-bar::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  min-height: 8px;
+  background-color: rgba(11, 11, 11, .5);
+}
+
+.loader-bar::after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  width: 130px;
+  min-height: 8px;
+  background-color: orange;
+  animation: load 3.5s linear infinite;
+}
+
+@keyframes load {
+  0% {
+    left: -50%;
+    width: 20%;
+  }
+
+  50% {
+    left: 50%;
+    width: 40%;
+  }
+
+  100% {
+    left: 150%;
+    width: 60%;
+  }
 }
