--- a/app/globals.css
+++ b/app/globals.css
@@ -81,8 +81,8 @@ body.modal-open {
 
 .primary-input {
   padding: 1rem;
-  border-radius: 5px;
-  border: 2px solid var(--foreground);
+  /* border-radius: 5px; */
+  border: 1px solid gray;
   background-color: var(--background);
   color: var(--foreground);
 }
