--- a/app/(protected)/app/titles-manager/titlesManager.module.css
+++ b/app/(protected)/app/titles-manager/titlesManager.module.css
@@ -1,21 +1,57 @@
-.title-card-container {
-    border-color: var(--foreground);
+.title_card_container {
+    display: flex;
+    flex-direction: column;
+    max-width: 300px;
+    min-width: 300px;
+    border: 1px solid var(--foreground);       
 }
 
-.title-card-container:active {
+.title_card_container:active {
     outline: 6px solid #fcd34d;
 }
 
-.title-card-name-container {
+.title_card_name_container {
     border-color: var(--foreground);
+    border-top: 1px solid gray;
+    overflow-y: scroll;
+    margin-top: 0;
+    width: 100%;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-.title-card-name-container::-webkit-scrollbar {
+.title_card_name_container::-webkit-scrollbar {
     display: none;
 }
 
-.close-button {
+.title_card_name {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.title_card_name>h3 {
+    padding: 0.5rem;
+    text-align: center;
+}
+
+.title_card_content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.title_card_image_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--foreground);
+}
+
+/* .close-button {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -24,35 +60,44 @@
     background-color: transparent;
     border: none;
     border-radius: 15px;
-    /* Circular shape */
+    /Circular shape /
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: center;
     font-weight: 500;
     font-size: 24px;
-    /* Adjust font size as needed */
-}
+    / Adjust font size as needed /
+} */
 
 /* .close-button {
     background-color: var(--foreground);
 } */
 
-.close-button:hover {
+/* .close-button:hover {
     background-color: var(--foreground);
 }
 
 .close-button:after {
     content: 'x';
     color: var(--foreground);
-}
+} */
 
-.modal-backdrop {
+.modal_backdrop {
     position: fixed;
 }
 
-.masonry-wrapper {
+.titles_wrapper_search_loading {
+    min-width: 80px !important;
+    min-height: 80px !important;
+    margin: 10%;
+    margin-top: 10rem;
+    position: fixed;
+}
+
+.titles_list_wrapper {
     margin: 1.5em;
+    margin-top: 6rem;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -61,7 +106,7 @@
     visibility: hidden;
 }
 
-.masonry {
+.titles_list {
     display: grid;
     grid-template-columns: repeat(1, minmax(100px, 1fr));
     grid-gap: 10px;
@@ -69,31 +114,31 @@
 }
 
 @media only screen and (max-width: 1249px) and (min-width: 768px) {
-    .masonry {
+    .titles_list {
         grid-template-columns: repeat(2, minmax(100px, 1fr));
     }
 }
 
 @media only screen and (max-width: 1499px) and (min-width: 1250px) {
-    .masonry {
+    .titles_list {
         grid-template-columns: repeat(4, minmax(100px, 1fr));
     }
 }
 
 @media only screen and (max-width: 1849px) and (min-width: 1500px) {
-    .masonry {
+    .titles_list {
         grid-template-columns: repeat(5, minmax(100px, 1fr));
     }
 }
 
 @media only screen and (min-width: 1850px) {
-    .masonry {
+    .titles_list {
         grid-template-columns: repeat(6, minmax(100px, 1fr));
     }
 }
 
-.masonry-item,
-.masonry-content {
+.titles_list_item,
+.titles_list_content {
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -101,9 +146,9 @@
     align-items: center;
 }
 
-.masonry-item {
+.titles_list_item {
     /*filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, .3));*/
-    transition: filter .25s ease-in-out;
+    transition: filter 0.25s ease-in-out;
     background: var(--background);
 }
 
@@ -111,13 +156,13 @@
     filter: drop-shadow(0px 0px 5px rgb(159, 159, 159));
 } */
 
-.masonry-item:active {
+.titles_list_item:active {
     outline: 6px solid #fcd34d;
 }
 
-.masonry-footer {
-    font-size: .75em;
-    opacity: .25;
+.titles_list_footer {
+    font-size: 0.75em;
+    opacity: 0.25;
     text-align: center;
     padding-top: 3em;
     padding-bottom: 3em;
@@ -125,34 +170,18 @@
     transition: opacity 1s ease-in-out;
 }
 
-.masonry-footer a {
+.titles_list_footer a {
     color: currentColor;
 }
 
-.masonry-footer:hover,
-.masonry-footer:active,
-.masonry-footer:focus {
-    opacity: .75;
+.titles_list_footer:hover,
+.titles_list_footer:active,
+.titles_list_footer:focus {
+    opacity: 0.75;
 }
 
 @media screen and (max-width: 730px) {
-    .titleActionsModal__footer {
-        display: flex;
-        flex-direction: column;
-        align-items: baseline;
-        justify-content: end;
-    }
-
-    .titleActionsModal__footer>button {
-        margin-bottom: 0.5rem;
-        width: 100%;
-    }
-
-    .titleActionsModal__footer>button:last-child {
-        margin-bottom: 0.1rem;
-    }
-
-    .title-card-container {
+    .title_card_container {
         min-height: auto;
     }
 }
