--- a/app/globals.css
+++ b/app/globals.css
@@ -3,206 +3,206 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #000000;
+    --background: #ffffff;
+    --foreground: #000000;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #000000;
-    --foreground: #ffffff;
-  }
+    :root {
+        --background: #000000;
+        --foreground: #ffffff;
+    }
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -ms-overflow-style: none;
+    color: var(--foreground);
+    background: var(--background);
+    font-family: Arial, Helvetica, sans-serif;
+    -ms-overflow-style: none;
 }
 
 body::-webkit-scrollbar {
-  display: none;
+    display: none;
 }
 
 .nav-links-container {
-  border-color: var(--foreground);
-  background-color: var(--background);
+    border-color: var(--foreground);
+    background-color: var(--background);
 }
 
 .nav-links-container::-webkit-scrollbar {
-  display: none;
+    display: none;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .nav-links-container {
-  -ms-overflow-style: none;
-  /* IE and Edge */
-  scrollbar-width: none;
-  /* Firefox */
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .nav-link {
-  color: var(--background);
-  -ms-overflow-style: none;
-  /* IE and Edge */
-  scrollbar-width: none;
-  /* Firefox */
+    color: var(--background);
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
 .nav-links-div::-webkit-scrollbar {
-  display: none;
+    display: none;
 }
 
 body.modal-open {
-  overflow: hidden;
+    overflow: hidden;
 }
 
 .primary-btn {
-  padding: 1rem;
-  border-radius: .375rem;
-  border: 1px solid var(--foreground);
-  background-color: var(--foreground);
-  color: var(--background);
+    padding: 1rem;
+    border-radius: 0.375rem;
+    border: 1px solid var(--foreground);
+    background-color: var(--foreground);
+    color: var(--background);
 }
 
 .secondary-btn {
-  padding: 1rem;
-  border-radius: .375rem;
-  border: 1px solid var(--foreground);
-  background-color: transparent;
-  color: var(--foreground);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    padding: 1rem;
+    border-radius: 0.375rem;
+    border: 1px solid var(--foreground);
+    background-color: transparent;
+    color: var(--foreground);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .primary-input {
-  padding: 1rem;
-  /* border-radius: 5px; */
-  border: 1px solid gray;
-  background-color: var(--background);
-  color: var(--foreground);
+    padding: 1rem;
+    /* border-radius: 5px; */
+    border: 1px solid gray;
+    background-color: var(--background);
+    color: var(--foreground);
 }
 
 .primary-btn:active,
 .secondary-btn:active,
 .primary-input:focus,
 .nav-link:active {
-  outline: 6px solid #fcd34d;
+    outline: 6px solid #fcd34d;
+    transition: outline 0.05s ease-in;
 }
 
 .animate {
-  animation-duration: 0.5s;
-  animation-name: animate-fade;
-  animation-delay: 1s;
-  animation-fill-mode: backwards;
+    animation-duration: 0.5s;
+    animation-name: animate-fade;
+    animation-delay: 1s;
+    animation-fill-mode: backwards;
 }
 
 .animate-fast {
-  animation-duration: 0.5s;
-  animation-name: animate-fade;
-  animation-delay: 0.25s;
-  animation-fill-mode: backwards;
+    animation-duration: 0.5s;
+    animation-name: animate-fade;
+    animation-delay: 0.25s;
+    animation-fill-mode: backwards;
 }
 
 .animate-faster {
-  animation-duration: 0.2s;
-  animation-name: animate-fade;
-  animation-delay: 0.0s;
-  animation-fill-mode: backwards;
+    animation-duration: 0.2s;
+    animation-name: animate-fade;
+    animation-delay: 0s;
+    animation-fill-mode: backwards;
 }
 
 .with-opacity-transition {
-  transition: opacity 0.3s ease-in-out;
+    transition: opacity 0.3s ease-in-out;
 }
 
 @keyframes animate-fade {
-  0% {
-    opacity: 0;
-  }
+    0% {
+        opacity: 0;
+    }
 
-  100% {
-    opacity: 1;
-  }
+    100% {
+        opacity: 1;
+    }
 }
 
-
 .loader {
-  border: 2px solid #f3f3f3;
-  /* Light grey */
-  border-top: 2px solid #3498db;
-  /* Blue */
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  animation: spin 2s linear infinite;
+    border: 2px solid #f3f3f3;
+    /* Light grey */
+    border-top: 2px solid #3498db;
+    /* Blue */
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    animation: spin 2s linear infinite;
 }
 
 .loader-red {
-  border: 2px solid #f3f3f3;
-  /* Light grey */
-  border-top: 2px solid #db3455;
-  /* Blue */
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  animation: spin 2s linear infinite;
+    border: 2px solid #f3f3f3;
+    /* Light grey */
+    border-top: 2px solid #db3455;
+    /* Blue */
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    animation: spin 2s linear infinite;
 }
 
 @keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
+    0% {
+        transform: rotate(0deg);
+    }
 
-  100% {
-    transform: rotate(360deg);
-  }
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 .loader-bar {
-  position: relative;
-  min-height: 8px;
-  overflow-x: hidden;
-  scrollbar-width: none;
-  color: white;
+    position: relative;
+    min-height: 8px;
+    overflow-x: hidden;
+    scrollbar-width: none;
+    color: white;
 }
 
 .loader-bar::before {
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  min-height: 8px;
-  background-color: rgba(11, 11, 11, .5);
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    min-height: 8px;
+    background-color: rgba(11, 11, 11, 0.5);
 }
 
 .loader-bar::after {
-  position: absolute;
-  content: "";
-  top: 0;
-  left: 0;
-  width: 130px;
-  min-height: 8px;
-  background-color: orange;
-  animation: load 3.5s linear infinite;
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 130px;
+    min-height: 8px;
+    background-color: orange;
+    animation: load 3.5s linear infinite;
 }
 
 @keyframes load {
-  0% {
-    left: -50%;
-    width: 20%;
-  }
+    0% {
+        left: -50%;
+        width: 20%;
+    }
 
-  50% {
-    left: 50%;
-    width: 40%;
-  }
+    50% {
+        left: 50%;
+        width: 40%;
+    }
 
-  100% {
-    left: 150%;
-    width: 60%;
-  }
+    100% {
+        left: 150%;
+        width: 60%;
+    }
 }
