--- a/app/(protected)/app/titles-manager/titlesManager.module.css
+++ b/app/(protected)/app/titles-manager/titlesManager.module.css
@@ -8,6 +8,7 @@
 
 .title_card_container:active {
     outline: 6px solid #fcd34d;
+    transition: outline 0.25s ease-in;
 }
 
 .title_card_name_container {
@@ -158,6 +159,7 @@
 
 .titles_list_item:active {
     outline: 6px solid #fcd34d;
+    transition: outline 0.25s ease-in;
 }
 
 .titles_list_footer {
