--- a/app/(protected)/app/titles-manager/titlesManager.module.css
+++ b/app/(protected)/app/titles-manager/titlesManager.module.css
@@ -1,4 +1,4 @@
-.title_card_container {
+.titleCardContainer {
     display: flex;
     flex-direction: column;
     max-width: 300px;
@@ -6,12 +6,12 @@
     border: 1px solid var(--foreground);       
 }
 
-.title_card_container:active {
+.titleCardContainer:active {
     outline: 6px solid #fcd34d;
     transition: outline 0.05s ease-in;
 }
 
-.title_card_name_container {
+.titleCardNameContainer {
     border-color: var(--foreground);
     border-top: 1px solid gray;
     overflow-y: scroll;
@@ -20,11 +20,11 @@
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-.title_card_name_container::-webkit-scrollbar {
+.titleCardNameContainer::-webkit-scrollbar {
     display: none;
 }
 
-.title_card_name {
+.titleCardName {
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -32,19 +32,19 @@
     align-items: center;
 }
 
-.title_card_name>h3 {
+.titleCardName>h3 {
     padding: 0.5rem;
     text-align: center;
 }
 
-.title_card_content {
+.titleCardContent {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
 }
 
-.title_card_image_container {
+.titleCardImageContainer {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -84,11 +84,11 @@
     color: var(--foreground);
 } */
 
-.modal_backdrop {
+.modalBackdrop {
     position: fixed;
 }
 
-.titles_wrapper_search_loading {
+.titlesWrapperSearchLoading {
     min-width: 80px !important;
     min-height: 80px !important;
     margin: 10%;
@@ -96,7 +96,7 @@
     position: fixed;
 }
 
-.titles_list_wrapper {
+.titlesListWrapper {
     margin: 1.5em;
     margin-top: 6rem;
     display: flex;
@@ -107,7 +107,7 @@
     visibility: hidden;
 }
 
-.titles_list {
+.titlesList {
     display: grid;
     grid-template-columns: repeat(1, minmax(100px, 1fr));
     grid-gap: 10px;
@@ -115,31 +115,31 @@
 }
 
 @media only screen and (max-width: 1249px) and (min-width: 768px) {
-    .titles_list {
+    .titlesList {
         grid-template-columns: repeat(2, minmax(100px, 1fr));
     }
 }
 
 @media only screen and (max-width: 1499px) and (min-width: 1250px) {
-    .titles_list {
+    .titlesList {
         grid-template-columns: repeat(4, minmax(100px, 1fr));
     }
 }
 
 @media only screen and (max-width: 1849px) and (min-width: 1500px) {
-    .titles_list {
+    .titlesList {
         grid-template-columns: repeat(5, minmax(100px, 1fr));
     }
 }
 
 @media only screen and (min-width: 1850px) {
-    .titles_list {
+    .titlesList {
         grid-template-columns: repeat(6, minmax(100px, 1fr));
     }
 }
 
-.titles_list_item,
-.titles_list_content {
+.titlesListItem,
+.titlesListContent {
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -147,7 +147,7 @@
     align-items: center;
 }
 
-.titles_list_item {
+.titlesListItem {
     /*filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, .3));*/
     transition: filter 0.25s ease-in-out;
     background: var(--background);
@@ -157,12 +157,12 @@
     filter: drop-shadow(0px 0px 5px rgb(159, 159, 159));
 } */
 
-.titles_list_item:active {
+.titlesListItem:active {
     outline: 6px solid #fcd34d;
     transition: outline 0.05s ease-in;
 }
 
-.titles_list_footer {
+.titlesListFooter {
     font-size: 0.75em;
     opacity: 0.25;
     text-align: center;
@@ -172,18 +172,18 @@
     transition: opacity 1s ease-in-out;
 }
 
-.titles_list_footer a {
+.titlesListFooter a {
     color: currentColor;
 }
 
-.titles_list_footer:hover,
-.titles_list_footer:active,
-.titles_list_footer:focus {
+.titlesListFooter:hover,
+.titlesListFooter:active,
+.titlesListFooter:focus {
     opacity: 0.75;
 }
 
 @media screen and (max-width: 730px) {
-    .title_card_container {
+    .titleCardContainer {
         min-height: auto;
     }
 }
