--- a/app/components/navBar.module.css
+++ b/app/components/navBar.module.css
@@ -10,6 +10,10 @@
     box-shadow: 0px 0px 30px 1px black;
     border-bottom: 1px solid gray;
     background-color: var(--background);
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
 }
 
 .navLinksDiv {
@@ -17,6 +21,10 @@
     flex-direction: row;
     align-items: center;
     overflow-x: scroll;
+}
+
+.navLinksContainer::-webkit-scrollbar {
+    display: none;
 }
 
 .navLinksDiv::-webkit-scrollbar {
