--- a/app/(protected)/app/jobs-manager/jobsManager.module.css
+++ b/app/(protected)/app/jobs-manager/jobsManager.module.css
@@ -1,34 +1,36 @@
-#jobsRefreshBtn,
-.jobVolumesCardContainer,
-.stopOrResumeBtn,
-.cardJobIdLabel {
+#jobs-refresh-btn,
+.job-volumes-card-container,
+.stop-or-resume-btn,
+.card-job-id-label {
     border-color: var(--foreground);
 }
 
-.volumeTitleLabel {
+.volume-title-label {
     color: var(--foreground);
     -ms-overflow-style: none;
+
     /* IE and Edge */
     scrollbar-width: none;
+
     /* Firefox */
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-.volumeTitleLabel::-webkit-scrollbar {
+.volume-title-label::-webkit-scrollbar {
     display: none;
 }
 
-.jobVolumesCard>div>hr {
+.job-volumes-card > div > hr {
     border-color: var(--foreground);
 }
 
-.jobVolumesCard>div:last-child>hr:last-child {
+.job-volumes-card > div:last-child > hr:last-child {
     display: none;
 }
 
-.volumeComputationPercentage {
+.volume-computation-percentage {
     color: white;
     background-color: #171717;
     padding-left: 4px;
     padding-right: 4px;
-} 
+}
