--- a/app/(protected)/app/titles-manager/titlesManager.module.css
+++ b/app/(protected)/app/titles-manager/titlesManager.module.css
@@ -1,4 +1,4 @@
-.titleCardContainer {
+.title-card-container {
     display: flex;
     flex-direction: column;
     max-width: 300px;
@@ -6,11 +6,11 @@
     border: 1px solid var(--foreground);
 }
 
-.titleCardContainer:active {
+.title-card-container:active {
     outline: 5px solid #fcd34d;
 }
 
-.titleCardNameContainer {
+.title-card-name-container {
     border-color: var(--foreground);
     border-top: 1px solid gray;
     overflow-y: scroll;
@@ -19,11 +19,11 @@
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-.titleCardNameContainer::-webkit-scrollbar {
+.title-card-name-container::-webkit-scrollbar {
     display: none;
 }
 
-.titleCardName {
+.title-card-name {
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -31,19 +31,19 @@
     align-items: center;
 }
 
-.titleCardName > h3 {
+.title-card-name > h3 {
     padding: 0.5rem;
     text-align: center;
 }
 
-.titleCardContent {
+.title-card-content {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
 }
 
-.titleCardImageContainer {
+.title-card-image-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -59,7 +59,7 @@
     height: 48px;
     background-color: transparent;
     border: none;
-    border-radius: 15px;
+    border-radius: 0;
     /Circular shape /
     cursor: pointer;
     display: flex;
@@ -83,11 +83,11 @@
     color: var(--foreground);
 } */
 
-.modalBackdrop {
+.modal-backdrop {
     position: fixed;
 }
 
-.titlesWrapperSearchLoading {
+.titles-wrapper-search-loading {
     min-width: 80px !important;
     min-height: 80px !important;
     margin: 10%;
@@ -95,7 +95,7 @@
     position: fixed;
 }
 
-.titlesListWrapper {
+.titles-list-wrapper {
     margin: 1.5em;
     margin-top: 6rem;
     display: flex;
@@ -106,39 +106,39 @@
     visibility: hidden;
 }
 
-.titlesList {
+.titles-list {
     display: grid;
     grid-template-columns: repeat(1, minmax(100px, 1fr));
-    grid-gap: 10px;
+    gap: 10px;
     grid-auto-rows: 0;
 }
 
-@media only screen and (max-width: 1249px) and (min-width: 768px) {
-    .titlesList {
+@media only screen and (width <= 1249px) and (width >= 768px) {
+    .titles-list {
         grid-template-columns: repeat(2, minmax(100px, 1fr));
     }
 }
 
-@media only screen and (max-width: 1499px) and (min-width: 1250px) {
-    .titlesList {
+@media only screen and (width <= 1499px) and (width >= 1250px) {
+    .titles-list {
         grid-template-columns: repeat(4, minmax(100px, 1fr));
     }
 }
 
-@media only screen and (max-width: 1849px) and (min-width: 1500px) {
-    .titlesList {
+@media only screen and (width <= 1849px) and (width >= 1500px) {
+    .titles-list {
         grid-template-columns: repeat(5, minmax(100px, 1fr));
     }
 }
 
-@media only screen and (min-width: 1850px) {
-    .titlesList {
+@media only screen and (width >= 1850px) {
+    .titles-list {
         grid-template-columns: repeat(6, minmax(100px, 1fr));
     }
 }
 
-.titlesListItem,
-.titlesListContent {
+.titles-list-item,
+.titles-list-content {
     overflow: hidden;
     display: flex;
     flex-direction: column;
@@ -146,8 +146,8 @@
     align-items: center;
 }
 
-.titlesListItem {
-    /*filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, .3));*/
+.titles-list-item {
+    /* filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, .3)); */
     transition: filter 0.25s ease-in-out;
     background: var(--background);
 }
@@ -156,11 +156,11 @@
     filter: drop-shadow(0px 0px 5px rgb(159, 159, 159));
 } */
 
-.titlesListItem:active {
+.titles-list-item:active {
     outline: 5px solid #fcd34d;
 }
 
-.titlesListFooter {
+.titles-list-footer {
     font-size: 0.75em;
     opacity: 0.25;
     text-align: center;
@@ -170,18 +170,18 @@
     transition: opacity 1s ease-in-out;
 }
 
-.titlesListFooter a {
-    color: currentColor;
+.titles-list-footer a {
+    color: currentcolor;
 }
 
-.titlesListFooter:hover,
-.titlesListFooter:active,
-.titlesListFooter:focus {
+.titles-list-footer:hover,
+.titles-list-footer:active,
+.titles-list-footer:focus {
     opacity: 0.75;
 }
 
-@media screen and (max-width: 730px) {
-    .titleCardContainer {
+@media screen and (width <= 730px) {
+    .title-card-container {
         min-height: auto;
     }
 }
