--- a/app/components/navBar.module.css
+++ b/app/components/navBar.module.css
@@ -1,4 +1,4 @@
-.navLinksContainer {
+.nav-links-container {
     z-index: 50;
     display: flex;
     flex-direction: row;
@@ -7,46 +7,50 @@
     overflow-x: scroll;
     position: fixed;
     width: 100%;
-    box-shadow: 0px 0px 30px 1px black;
+    box-shadow: 0 0 30px 1px black;
     border-bottom: 1px solid gray;
     background-color: var(--background);
     -ms-overflow-style: none;
+
     /* IE and Edge */
     scrollbar-width: none;
+
     /* Firefox */
 }
 
-.navLinksDiv {
+.nav-links-div {
     display: flex;
     flex-direction: row;
     align-items: center;
     overflow-x: scroll;
 }
 
-.navLinksContainer::-webkit-scrollbar {
+.nav-links-container::-webkit-scrollbar {
     display: none;
 }
 
-.navLinksDiv::-webkit-scrollbar {
+.nav-links-div::-webkit-scrollbar {
     display: none;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
-.navLinksDiv {
+.nav-links-div-scrollbar-hidden {
     -ms-overflow-style: none;
+
     /* IE and Edge */
     scrollbar-width: none;
+
     /* Firefox */
 }
 
-.navLink {
+.nav-link {
     padding: 1rem;
     flex-shrink: 0;
     margin: 1rem;
-    border-radius: 0.375rem;
+    border-radius: 0;
 }
 
-.navUserSection {
+.nav-user-section {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -55,8 +59,8 @@
     border-left: 1px solid gray;
 }
 
-@media (max-width: 660px) {
-    .navUserSection {
-        box-shadow: 0px 0px 30px 5px var(--background);
+@media (width <= 660px) {
+    .nav-user-section {
+        box-shadow: 0 0 30px 5px var(--background);
     }
 }
