--- a/app/globals.css
+++ b/app/globals.css
@@ -3,14 +3,14 @@
 @tailwind utilities;
 
 :root {
-    --background: #ffffff;
-    --foreground: #000000;
+    --background: #fff;
+    --foreground: #000;
 }
 
 @media (prefers-color-scheme: dark) {
     :root {
-        --background: #000000;
-        --foreground: #ffffff;
+        --background: #000;
+        --foreground: #fff;
     }
 }
 
@@ -31,7 +31,7 @@ body.modal-open {
 
 .primary-btn {
     padding: 1rem;
-    border-radius: 0.375rem;
+    border-radius: 0;
     border: 1px solid var(--foreground);
     background-color: var(--foreground);
     color: var(--background);
@@ -39,7 +39,7 @@ body.modal-open {
 
 .secondary-btn {
     padding: 1rem;
-    border-radius: 0.375rem;
+    border-radius: 0;
     border: 1px solid var(--foreground);
     background-color: transparent;
     color: var(--foreground);
@@ -50,7 +50,8 @@ body.modal-open {
 
 .primary-input {
     padding: 1rem;
-    /* border-radius: 5px; */
+
+    /* border-radius: 0; */
     border: 1px solid gray;
     background-color: var(--background);
     color: var(--foreground);
@@ -98,10 +99,38 @@ body.modal-open {
     }
 }
 
-.loader {
-    border: 2px solid #f3f3f3;
+.loader-foreground {
+    border: 2px solid var(--foreground);
+
     /* Light grey */
     border-top: 2px solid transparent;
+
+    /* Blue */
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    animation: spin 2s linear infinite;
+}
+
+.loader-background {
+    border: 2px solid var(--background);
+
+    /* Light grey */
+    border-top: 2px solid transparent;
+
+    /* Blue */
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    animation: spin 2s linear infinite;
+}
+
+.loader-red {
+    border: 2px solid red;
+
+    /* Light grey */
+    border-top: 2px solid transparent;
+
     /* Blue */
     border-radius: 50%;
     width: 20px;
@@ -133,7 +162,7 @@ body.modal-open {
     top: 0;
     left: 0;
     min-height: 8px;
-    background-color: rgba(11, 11, 11, 0.5);
+    background-color: rgb(11 11 11 / 50%);
 }
 
 .loader-bar::after {
@@ -161,7 +190,7 @@ body.modal-open {
     top: 0;
     left: 0;
     min-height: 8px;
-    background-color: rgba(11, 11, 11, 0.5);
+    background-color: rgb(11 11 11 / 50%);
 }
 
 .loader-bar-fast::after {
