--- a/app/sign-in/sign-in.css
+++ b/app/sign-in/sign-in.css
@@ -2,10 +2,12 @@ body {
     color: var(--foreground);
 }
 
-.loader {
-    border: 2px solid #f3f3f3;
+.loader-background {
+    border: 2px solid var(--background);
+
     /* Light grey */
-    border-top: 2px solid #3498db;
+    border-top: 2px solid transparent;
+
     /* Blue */
     border-radius: 50%;
     width: 20px;
