--- a/docs/assets/highlight.css
+++ b/docs/assets/highlight.css
@@ -1,13 +1,13 @@
 :root {
     --light-hl-0: #795E26;
     --dark-hl-0: #DCDCAA;
-    --light-hl-1: #000000;
+    --light-hl-1: #000;
     --dark-hl-1: #D4D4D4;
     --light-hl-2: #A31515;
     --dark-hl-2: #CE9178;
-    --light-hl-3: #0000FF;
+    --light-hl-3: #00F;
     --dark-hl-3: #569CD6;
-    --light-code-background: #FFFFFF;
+    --light-code-background: #FFF;
     --dark-code-background: #1E1E1E;
 }
 
